--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2594,7 +2594,7 @@ input, select, textarea {
 		justify-content: space-between;
 		background-color: #1f1815;
 		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+		background-image: url("images/bg_des4.png"), url("../../images/bg_da6.png");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								150%;
@@ -2656,7 +2656,7 @@ input, select, textarea {
 
 	#footer .copyright {
 		color: rgba(255, 255, 255, 0.4);
-		font-size: 1.1em;
+		font-size: 1.0em;
 		list-style: none;
 		margin: 1em 0 0 0;
 		padding: 0;
@@ -3220,3 +3220,35 @@ input, select, textarea {
 			}
 
 	}
+
+	/* <!-- <style> */
+	.logo-container {
+		display: inline-block; /* Align logos horizontally */
+		margin-right: 10px; /* Space between logos */
+		position: relative; /* Position for overlay */
+		width: 50px; /* Set fixed width */
+		height: 50px; /* Set fixed height */
+		border-radius: 50%; /* Make it circular */
+		border: 0.3px solid whitesmoke; /* Border color */
+		overflow: hidden; /* Hide overflow for the circular shape */
+	}
+
+	.logo-container img {
+		width: 100%; /* Fill container */
+		height: 100%; /* Fill container */
+		object-fit: cover; /* Cover the container */
+	}
+
+	.overlay {
+		position: absolute; /* Position overlay on top */
+		top: 0; /* Align to top */
+		left: 0; /* Align to left */
+		width: 100%; /* Cover the entire logo */
+		height: 100%; /* Cover the entire logo */
+		background-color: rgba(150, 148, 148, 0.5); /* Gray tint */
+		pointer-events: none; /* Allow clicks through the overlay */
+		opacity: 0.5
+	}
+	/* </style> --> */
+
+	
