--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2594,7 +2594,7 @@ input, select, textarea {
 		justify-content: space-between;
 		background-color: #1f1815;
 		background-attachment: scroll,								scroll;
-		background-image: url("images/bg_des4.png"), url("../../images/bg_da6.png");
+		background-image: url("images/overlay.png"), url("images/br_gr5.png");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								150%;
